--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
-name = "gaia"
+name = "molecule-net"
 version = "0.0.0"
-description = "Template repository for Python projects"
+description = "Geometric Deep Learning example project"
 authors = ["Yifei Yu <yyu.mam2020@london.edu>"]
 license = "MIT"
 readme = "README.md"
@@ -10,6 +10,8 @@ readme = "README.md"
 python = "^3.9"
 dataclasses-json = "^0.5.7"
 python-dotenv = "^0.20.0"
+networkx = "^2.8"
+rdkit-pypi = "^2022.3.2.1"
 
 [tool.poetry.group.dev.dependencies]
 black = "^22.3.0"
@@ -20,6 +22,10 @@ semgrep = "^0.86.5"
 coverage = {extras = ["toml"], version = "^6.3.2"}
 pyproject-flake8 = "^0.0.1-alpha.3"
 yamllint = "^1.26.3"
+poethepoet = "^0.13.1"
+
+[tool.poe.tasks]
+install-pytorch-geometric = "python -m pip install torch-scatter torch-sparse torch-cluster torch-spline-conv torch-geometric -f https://data.pyg.org/whl/torch-1.11.0+cpu.html"
 
 [build-system]
 requires = ["poetry-core"]
